Attempt to resolve height issue on mobile screens

--- a/src/styles/bgandswitch.css
+++ b/src/styles/bgandswitch.css
@@ -82,7 +82,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 100lvh;
+  min-height: 100lvh;
   overflow: hidden;
   z-index: -1;
   pointer-events: none;
